# SpriteSheetViewer

./: .gitignore  .gitmodules  Animation.hpp  AnimationIO.cpp  AnimationIO.hpp  CMakeLists.txt  CPPLINT.cfg  PanelManager.cpp  PanelManager.hpp  Panels.cpp  Panels.hpp  README.md  SpriteSheet.cpp  SpriteSheet.hpp  SpriteSheetAnimation.cpp  SpriteSheetAnimation.hpp  Viewer.cpp  Viewer.hpp  ViewerScene.cpp  ViewerScene.hpp  main.cpp
ext/Profiler/: .gitignore  CMakeLists.txt  Licence  Readme.md
ext/Profiler/cmake/: External_GTest.cmake
ext/Profiler/example/: CMakeLists.txt  main.cpp
ext/Profiler/incl/profiler/: ProfileResult.hpp  Profiler.hpp  ProfilerManager.hpp  ThreadConverter.hpp  ThreadUtils.hpp  Timer.hpp  Utils.hpp
ext/Profiler/src/: ProfilerManager.cpp  ThreadConverter.cpp  Timer.cpp
ext/Profiler/tests/: runner.cpp
ext/robot2D-imgui/: CMakeLists.txt  README.md
ext/robot2D-imgui/example/: main.cpp
ext/robot2D-imgui/include/robot2D/Extra/: Api.hpp  Gui.hpp  WindowOptions.hpp
ext/robot2D-imgui/include/robot2D/imgui/: Api.hpp  Gui.hpp  Render.hpp
ext/robot2D-imgui/src/: imgui_widgets.cpp
ext/robot2D-imgui/src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp
ext/robot2D-imgui/src/robot2D/: Api.cpp  Gui.cpp  OrthoView.cpp  Render.cpp  Util.cpp  WindowOptions.cpp
incl/viewer/: PanelManager.hpp  Panels.hpp  SpriteSheet.hpp  SpriteSheetAnimation.hpp  Viewer.hpp  ViewerScene.hpp
include/viewer/: Animation.hpp  AnimationIO.hpp  Camera2D.hpp  Collider.hpp  CommandStack.hpp  DebugCollider.hpp  Defines.hpp  EventBinder.hpp  FileDialog.hpp  IDocument.hpp  ISceneView.hpp  Macro.hpp  MessageDispather.hpp  Messages.hpp  MovableSprite.hpp  NamesContainer.hpp  PanelManager.hpp  PixelBuffer.hpp  Quad.hpp  SceneGrid.hpp  SpriteCutter.hpp  SpriteSheet.hpp  SpriteSheetAnimation.hpp  TabContainer.hpp  ThreadSafeQueue.hpp  Utils.hpp  Viewer.hpp  ViewerAnimation.hpp  ViewerManager.hpp  ViewerScene.hpp  ViewerView.hpp  macro.hpp  utils.hpp
include/viewer/commands/: AddFrameCommand.hpp  DeleteFrameCommand.hpp  ICommand.hpp  SelectFrameCommand.hpp
include/viewer/panels/: AnimationPanel.hpp  FramePanel.hpp  IPanel.hpp  MenuPanel.hpp  PreviewPanel.hpp  ScenePanel.hpp  ViewerPanel.hpp
include/viewer/tabbar/: ImGui_TabbarController.hpp  SceneTabbarController.hpp  SceneTabbarInteractor.hpp
res/animations/ZombieBoss/: BossDeath.xml  BossRangeAttack.xml  BossWalk.xml
src/: AnimationIO.cpp  Camera2D.cpp  CommandStack.cpp  EventBinder.cpp  FileDialog.cpp  IParser.hpp  ISceneView.cpp  Macro.cpp  MessageDispatcher.cpp  MovableSprite.cpp  NamesContainer.cpp  PanelManager.cpp  Panels.cpp  PixelBuffer.cpp  Quad.cpp  SceneGrid.cpp  SpriteCutter.cpp  SpriteSheet.cpp  SpriteSheetAnimation.cpp  TabContainer.cpp  Utils.cpp  Viewer.cpp  ViewerAnimation.cpp  ViewerManager.cpp  ViewerScene.cpp  ViewerView.cpp  XmlParser.cpp  XmlParser.hpp  main.cpp  utils.cpp
src/commands/: AddFrameCommand.cpp  DeleteFrameCommand.cpp  ICommand.cpp
src/panels/: AnimationPanel.cpp  FramePanel.cpp  IPanel.cpp  MenuPanel.cpp  ScenePanel.cpp  ViewerPanel.cpp
src/tabbar/: ImGui_TabbarController.cpp  SceneTabbarController.cpp  SceneTabbarInteractor.cpp
